src/test/error/Alge.lns
{
   proto class Hoge;
   alge Test {
      Val( Hoge ), // error
   }
   class Hoge {
   }
}

pub alge AlgeTest {
   Val1,
   Val2,
}  

{
   let test1 = AlgeTest.Val1( 1 ); // error
}
